tests/macros/plugin/transform.rs
fn main() {
    let q = requestty::questions![Plugin { transform: todo!() }];
}
